basic style/nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul class="logo-container">
+            <li>LOGO</li>
+        </ul>
+        <ul class="links-containers">
+            <li>About</li>
+            <li>Contact</li>
+            <li>More</li>
+        </ul>
+    </nav>
     <h1>HELLO!!!</h1>
 
     <script src="./app.js"></script>
